objects/Invite_Colleagues__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invited Colleagues</relationshipLabel>
        <relationshipName>Invited_Colleagues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Id_from_Lead__c</fullName>
        <label>Contact Id from Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Invite_Colleagues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Trial_ID__c</fullName>
        <label>Global Trial ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Invite_Colleagues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>One_Pass_Identifier__c</fullName>
        <label>One Pass Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_contact_Trial_Status__c</fullName>
        <formula>TEXT(Trial__r.Trial_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary contact Trial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapContactId__c</fullName>
        <label>SAP Contact #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>contains the count for one pass error service to limit the schedulable class.</description>
        <inlineHelpText>no of times one pass error service called</inlineHelpText>
        <label>Service Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_System_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ssd</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Invited Colleagues</relationshipLabel>
        <relationshipName>Invited_Colleagues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Campaign__c</fullName>
        <label>Trial Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Request_Date__c</fullName>
        <label>Trial Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Status__c</fullName>
        <label>Trial Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Rep Initiated</fullName>
                </value>
                <value>
                    <fullName>Timed-out</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Entitlement Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipName>Invite_Colleagues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Auth_ID__c</fullName>
        <label>User Auth ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Invited Colleagues</label>
    <nameField>
        <label>Invited Colleagues Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invited Colleagues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>